force-app/main/default/objects/TS_On_Time__c/TS_On_Time__c.object-meta.xml
<CustomObject>
    <label>TS On Time</label>
    <nameField>
        <label>TS On Time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TS On Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>