force-app/main/default/objects/TS_On_Time__c/fields/Accounting_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Year_Month__c</fullName>
    <label>Accounting Year Month</label>
    <length>200</length>
    <type>Text</type>
</CustomField>