force-app/main/default/objects/TS_On_Time__c/fields/Install_Site__c.field-meta.xml
<CustomField>
    <fullName>Install_Site__c</fullName>
    <label>Install Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>