force-app/main/default/objects/TS_On_Time__c/fields/PM_Quicklook__c.field-meta.xml
<CustomField>
    <fullName>PM_Quicklook__c</fullName>
    <label>PM Quicklook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>