force-app/main/default/objects/TS_On_Time__c/fields/Project_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Activity_Type__c</fullName>
    <label>Project Activity Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>