force-app/main/default/objects/TS_On_Time__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>