force-app/main/default/objects/TS_On_Time__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>